			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

===============================
VERSION 5.6.32 (March 26, 2007)
===============================

  * ENHANCED: library(debug).  Warn if topic is not registered and include
    the issuing thread in the message if it is not the main thread.  Mike
    Elston.

  * ADDED: Windows: menu entries for debug monitor and exception monitor.
    Also added these to PceEmacs Prolog mode.

  * ENHANCED: Extend context in which PL_new_term_ref() can be called
    to include the cases required by JPL.

  * MODIFIED: Do not call prolog_exception_hook/4 if debugger is
    suspended (typically in calls from the debugger and IDE tools).

  * ADDED: rl_write_history/1 and rl_read_history/1.  Suggested by
    Samer Abdallah.

  * FIXED: Reduce cases that cause a long delay in halt with the
    message "<N> threads wouldn't die"

===============================
VERSION 5.6.31 (March 16, 2007)
===============================

  * FIXED: told/seen underflow in lock-count on stream. Steffen Schwigon.

  * FIXED: do not stop break-level after exception.  Paulo Moura.

  * ADDED: Safety check in PL_new_term_ref() and PL_new_term_refs().
    Ben Chistador.

  * FIXED: Restoring generate_debug_info flag over loading .qlf files.
    Mike Elston.

  * FIXED: library(base64): Determinism while decoding.

  * PORT: Bug#266: Ensure package build exits on first error.  Keri Harris.

===============================
VERSION 5.6.30 (March 08, 2007)
===============================

  * ADDED: powm(Base, Exp, Modulo) function if GMP support is provided.

  * MODIFIED: Allow qcompile/1 on files that do not have the standard
    extension.  Mike Elston.

  * FIXED: Determinsm in contains_term/2 and contains_var/2 (library
    assoc.pl).
