@@ -288,7 +288,7 @@ prolog_message(profile_no_cpu_time) -->
 prolog_message(non_ascii(Text, Type)) -->
 	[ 'Unquoted ~w with non-portable characters: ~w'-[Type, Text] ].
 prolog_message(io_warning(Stream, Message)) -->
-	{ stream_property(Stream, Position),
+	{ stream_property(Stream, position(Position)), !,
 	  stream_position_data(line_count, Position, LineNo),
 	  stream_position_data(line_position, Position, LinePos),
 	  (   stream_property(Stream, file_name(File))
@@ -297,6 +297,8 @@ prolog_message(io_warning(Stream, Message)) -->
 	  )
 	},
 	[ '~p:~d:~d: ~w'-[Obj, LineNo, LinePos, Message] ].
+prolog_message(io_warning(Stream, Message)) -->
+	[ 'stream ~p: ~w'-[Stream, Message] ].
 
 
 		 /*******************************
