@@ -107,6 +107,7 @@ Section "Base system (required)"
   File pl\library\ordsets.pl
   File pl\library\oset.pl
   File pl\library\assoc.pl
+  File pl\library\rbtrees.pl
   File pl\library\nb_set.pl
   File pl\library\operators.pl
   File pl\library\heaps.pl
